NetBSD Problem Report #7741

Received: (qmail 13094 invoked from network); 9 Jun 1999 08:04:45 -0000
Message-Id: <199906090804.BAA14916@nooksack.ldc.cs.wwu.edu>
Date: Wed, 9 Jun 1999 01:04:39 -0700 (PDT)
From: johnr@spimageworks.com
Reply-To: johnr@spimageworks.com
To: gnats-bugs@gnats.netbsd.org
Subject: syboot-14.fs can create zero length partitions with non-zero offset
X-Send-Pr-Version: www-1.0

>Number:         7741
>Category:       port-sparc
>Synopsis:       syboot-14.fs can create zero length partitions with non-zero offset
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    abs
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jun 09 01:05:02 +0000 1999
>Closed-Date:    Thu Sep 02 22:04:08 +0000 1999
>Last-Modified:  Thu Sep 02 22:04:33 +0000 1999
>Originator:     John Refling
>Release:        1.4
>Organization:
>Environment:
NetBSD gail 1.4 NetBSD 1.4 (GENERIC) #0: Sun May  9 03:00:22 MEST 1999     pk@flambard:/usr/src/sys/arch/sparc/compile/GENERIC sparc


>Description:
When installing using syboot-14, if one chooses to have one large /
partition and one swap partition, we are asked for the size of 'a' and
I respond 17498880, then asked for the size of 'b' and I respond 201600.
At that point there is nothing left on the disk, but I am asked for size
of '/usr [0]' which I keep at 0.  That's the end of the questions.

The the partitions are printed out as a, b, and c, which looks OK.
The newfs command then fails and the entire install aborts.

I repeat the above, but respond that I want to change a partition,
and then the entire a,b,c,d,e,f,g,etc partitions are printed and
g looks like: size:0 offset:17700480.  The offset killed the newfs.
>How-To-Repeat:


>Fix:
Either make newfs not choke when it gets a partition of zero size
but non-zero offset (do nothing),

or

ensure that the install script sets the offset to zero of all zero
lenght partitions.

>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->feedback 
State-Changed-By: abs 
State-Changed-When: Wed Sep 1 11:10:34 PDT 1999 
State-Changed-Why:  
The 1.4.1 syboot floppy should be much more intelligent with respect to 
partitioning - it will no longer prompt for /usr if there i no space left on 
the disk, plus it will reject a zero length filesystem if manually entered. 

If you have a chance to confirm it all works for you that would be appreciated. 


Responsible-Changed-From-To: port-sparc-maintainer->abs 
Responsible-Changed-By: abs 
Responsible-Changed-When: Wed Sep 1 11:10:34 PDT 1999 
Responsible-Changed-Why:  
State-Changed-From-To: feedback->closed 
State-Changed-By: abs 
State-Changed-When: Thu Sep 2 15:04:08 PDT 1999 
State-Changed-Why:  
sysinst on sparc will no longer create zero length partitions. 
>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.