If all disk is allocated to root and/or swap do not prompt for a (bogus) /usr. Fixed PR#7741 If the default swap is smaller than the remaining disk, truncate to the available space. Set rc_configured to YES in md_cleanup_install()